Already build in local

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "generate": "prisma generate --schema=prisma/schema.prisma",
+    "generate": "prisma generate --schema=prisma.schema.prisma",
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build ",
     "start": "next start",
