--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
