--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "src/",
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -20,7 +20,7 @@
       }
     ],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["*"]
     },
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
