--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "scripts": {
     "generate": "prisma generate --schema=./prisma/schema.prisma",
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build ",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:reset": "prisma migrate reset --schema=./prisma/schema.prisma --force",
+    "migrate:deploy": "prisma migrate deploy --schema=./prisma/schema.prisma",
+    "migrate:dev": "prisma migrate dev --schema=./prisma/schema.prisma"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
